# groove

./: CMakeLists.txt  README.md  conanfile.py
lib/: CMakeLists.txt
lib/groove_data/: CMakeLists.txt
lib/groove_data/include/groove_data/: array_utils.h  base_frame.h  base_vector.h  category.h  category_builder.h  category_double_vector.h  category_frame.h  category_int64_vector.h  category_string_vector.h  comparison_utils.h  data_result.h  data_types.h  double_double_vector.h  double_frame.h  double_int64_vector.h  double_string_vector.h  int64_double_vector.h  int64_frame.h  int64_int64_vector.h  int64_string_vector.h  table_utils.h
lib/groove_data/src/: array_utils.cpp  base_frame.cpp  base_vector.cpp  category.cpp  category_builder.cpp  category_double_vector.cpp  category_frame.cpp  category_int64_vector.cpp  category_string_vector.cpp  comparison_utils.cpp  data_result.cpp  data_types.cpp  double_double_vector.cpp  double_frame.cpp  double_int64_vector.cpp  double_string_vector.cpp  int64_double_vector.cpp  int64_frame.cpp  int64_int64_vector.cpp  int64_string_vector.cpp  table_utils.cpp
lib/groove_data/test/: CMakeLists.txt  category_data_frame_tests.cpp  category_tests.cpp  double_data_frame_tests.cpp  int64_data_frame_tests.cpp
lib/groove_io/: CMakeLists.txt
lib/groove_io/include/groove_io/: dataset_file.h  dataset_reader.h  dataset_writer.h  frame_walker.h  groove_index.h  index_frame.h  index_state.h  index_vector.h  index_walker.h  io_result.h  io_types.h  vector_walker.h
lib/groove_io/share/: index.fbs
lib/groove_io/src/: dataset_file.cpp  dataset_reader.cpp  dataset_writer.cpp  frame_walker.cpp  groove_index.cpp  index_frame.cpp  index_state.cpp  index_vector.cpp  index_walker.cpp  io_result.cpp  vector_walker.cpp
lib/groove_io/src/internal/: index_reader.cpp
lib/groove_io/test/: CMakeLists.txt  dataset_reader_tests.cpp  dataset_writer_tests.cpp
lib/groove_iterator/: CMakeLists.txt
lib/groove_iterator/include/groove_iterator/: base_iterator.h  filter_iterator_template.h  map_iterator_template.h  peek_iterator_template.h  range_iterator_template.h
lib/groove_iterator/src/: base_iterator.cpp
lib/groove_iterator/test/: CMakeLists.txt  filter_iterator_tests.cpp  map_iterator_tests.cpp
lib/groove_math/: CMakeLists.txt
lib/groove_math/include/groove_math/: average_function.h  base_reducer.h  math_result.h  math_types.h  maximum_function.h  minimum_function.h  reducer_template.h  reducer_traits.h  samplecount_function.h  sum_function.h
lib/groove_math/src/: average_function.cpp  base_reducer.cpp  math_result.cpp  math_types.cpp  maximum_function.cpp  minimum_function.cpp  samplecount_function.cpp  sum_function.cpp
lib/groove_math/test/: CMakeLists.txt  average_function_tests.cpp  maximum_function_tests.cpp  minimum_function_tests.cpp  samplecount_function_tests.cpp  sum_function_tests.cpp
lib/groove_model/: .gitignore  CMakeLists.txt
lib/groove_model/include/groove_model/: abstract_dataset.h  abstract_page_cache.h  abstract_page_store.h  base_column.h  base_page.h  category_column_iterator.h  column_traits.h  column_walker.h  conversion_utils.h  double_column_iterator.h  groove_database.h  groove_model.h  groove_schema.h  indexed_column_template.h  indexed_column_writer_template.h  indexed_page_template.h  indexed_variant_column.h  int64_column_iterator.h  model_result.h  model_types.h  model_walker.h  namespace_walker.h  page_id.h  page_traits.h  persistent_caching_page_store.h  rocksdb_store.h  schema_attr.h  schema_attr_parser.h  schema_attr_writer.h  schema_column.h  schema_model.h  (+6 more)
lib/groove_model/share/: schema.fbs
lib/groove_model/src/: base_column.cpp  base_page.cpp  category_column_iterator.cpp  column_walker.cpp  conversion_utils.cpp  double_column_iterator.cpp  groove_database.cpp  groove_model.cpp  groove_schema.cpp  indexed_variant_column.cpp  int64_column_iterator.cpp  model_result.cpp  model_types.cpp  model_walker.cpp  namespace_walker.cpp  page_id.cpp  persistent_caching_page_store.cpp  rocksdb_store.cpp  schema_attr.cpp  schema_attr_parser.cpp  schema_attr_writer.cpp  schema_column.cpp  schema_model.cpp  schema_namespace.cpp  schema_state.cpp  schema_walker.cpp  shared_string_buffer.cpp  variant_key.cpp  variant_value.cpp
lib/groove_model/test/: CMakeLists.txt  category_int64_indexed_column_tests.cpp  category_int64_page_tests.cpp  double_int64_page_tests.cpp  groove_model_tests.cpp  indexed_variant_column_tests.cpp  int64_double_page_tests.cpp  int64_int64_indexed_column_tests.cpp  int64_int64_page_tests.cpp  int64_string_page_tests.cpp  page_id_tests.cpp
lib/groove_mount/: CMakeLists.txt
lib/groove_mount/share/: mount_service.proto
lib/groove_shapes/: CMakeLists.txt
lib/groove_shapes/src/: bar_annotation_shape.cpp  bar_group_shape.cpp  bar_stack_shape.cpp  base_shape.cpp  event_table_shape.cpp  info_table_shape.cpp  pie_annotation_shape.cpp  pie_group_shape.cpp  series_annotation_shape.cpp  series_group_shape.cpp  series_stack_shape.cpp  shape_provider.cpp  shape_types.cpp  shapes_result.cpp  summary_group_shape.cpp
lib/groove_shapes/test/: CMakeLists.txt  bar_group_shape_tests.cpp  series_group_shape_tests.cpp
lib/groove_storage/: CMakeLists.txt
lib/groove_storage/share/: shard.fbs
lib/groove_storage/src/: dataset_synchronizer.cpp  fair_queuing_scheduler.cpp  groove_shard.cpp  groove_storage.cpp  multi_pull_request.cpp  remote_collection.cpp  shard_interval.cpp  shard_state.cpp  storage_client.cpp  storage_result.cpp  storage_types.cpp  sync_provider.cpp  syncing_client.cpp
lib/groove_storage/test/: CMakeLists.txt  shard_writer_tests.cpp
lib/groove_sync/: CMakeLists.txt
lib/groove_sync/share/: sync_service.proto
lib/groove_units/: .gitignore  CMakeLists.txt
lib/groove_units/share/: UnitsLexer.g4  UnitsParser.g4
lib/groove_units/src/: magnitude.cpp  quantity.cpp  reference_system_manager.cpp  unicode_utils.cpp  unit_dimension.cpp  unit_reference_system.cpp  unit_scale.cpp  units_result.cpp
lib/groove_units/test/: CMakeLists.txt  test_unit_dimension.cpp  test_unit_reference_system.cpp
(+46 files in other folders)
